Fixes opencrx/opencrx-documentation/issues/12